--- a/template/chinese_tutor/index.html
+++ b/template/chinese_tutor/index.html
@@ -21,8 +21,9 @@
     Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.1;">
     Please do not look the characters up on the internet. You will see each
     character multiple times and after each attempt you will be given the
-    correct answer. If you do not know the answer, or cannot remember, then
-    submit without entering an answer.
+    correct answer (which will be shown for 3 seconds before a new character is
+    presented). If you do not know the answer, or cannot remember, then submit
+    without entering an answer.
 </span><span style="color: inherit; font-family: Verdana, Geneva, sans-serif; font-size: 0.9em; line-height: 1.6em;">&nbsp;</span></p>
 
 </div>
