slightly modified text

--- a/template/chinese_tutor/index.html
+++ b/template/chinese_tutor/index.html
@@ -14,14 +14,14 @@
 <div class="a3s" id=":nb" style="overflow: hidden;">
 <div dir="ltr">
 <p style=""><font color="#000000" face="Times" size="6"><span style="line-height: normal;">
-        Please <strong>translate</strong> this Chinese character <strong>to
-            {{ flash_card.response_type }}.</strong></span></font></p>
+        Please provide your <strong> {{ flash_card.response_type }}</strong>
+        response for the following flashcard.</span></font></p>
 
 <p style=""><span style="color: inherit; font-family: 'Helvetica Neue',
     Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.1;">
-    Please do not look the characters up on the internet. You will see each
-    character multiple times and after each attempt you will be given the
-    correct answer (which will be shown for 3 seconds before a new character is
+    Please do not look the responses on the internet. You will see each
+    flashcard multiple times and after each attempt you will be given the
+    correct answer (which will be shown for 3 seconds before a new flashcard is
     presented). If you do not know the answer, or cannot remember, then submit
     without entering an answer.
 </span><span style="color: inherit; font-family: Verdana, Geneva, sans-serif; font-size: 0.9em; line-height: 1.6em;">&nbsp;</span></p>
@@ -49,7 +49,7 @@
         size="6">Incorrect, the right response is "{{ flash_card.response }}"</font></div>
 
 <div id="input_fields" style="text-align:center; width: 100%; padding: 10px;">
-    Enter your <strong>{{ flash_card.response_type }}</strong> translation: 
+    Enter your <strong>{{ flash_card.response_type }}</strong> response: 
         <input id="user_response" style="width:
         250px; height: 30px"></input>
         <br/> <br/>
