slightly modified text

--- a/template/chinese_tutor/index.html
+++ b/template/chinese_tutor/index.html
@@ -19,7 +19,7 @@
 
 <p style=""><span style="color: inherit; font-family: 'Helvetica Neue',
     Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.1;">
-    Please do not look the responses on the internet. You will see each
+    Please do not look up the responses on the internet. You will see each
     flashcard multiple times and after each attempt you will be given the
     correct answer (which will be shown for 3 seconds before a new flashcard is
     presented). If you do not know the answer, or cannot remember, then submit
